# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Simple_Q"
version = "1.0.4"
description = "A low learning curve implementation of a Q-Learning algorithm."
readme = "README.md"
authors = [{ name = "Nesta", email = "nesta110402@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "bidict",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Nesta-gitU/Simple-Q"
